fix:Fix Add icon icon not centered

--- a/src/styles/muti-sign.scss
+++ b/src/styles/muti-sign.scss
@@ -248,7 +248,7 @@
                                 border-radius:50%;
                                 border: 1px solid #979797;
                                 text-align: center;
-                                line-height: 18px;
+                                line-height: 1.2;
                                 margin-left:10px;
                                 &.minus{
                                     color:#979797!important;
@@ -671,7 +671,7 @@
                                 border-radius:50%;
                                 border: 1px solid #979797;
                                 text-align: center;
-                                line-height: 18px;
+                                line-height: 1.2;
                                 margin-left:10px;
                                 &.minus{
                                     color:#979797!important;
